Fix incorrectly translated spacing values

--- a/src/assets/styles/partials/components/_card.scss
+++ b/src/assets/styles/partials/components/_card.scss
@@ -18,7 +18,7 @@
   position: relative;
   padding: var(--card-padding);
   background-color: var(--card-bg-color);
-  border-radius: spacing(-2);
+  border-radius: spacing(-3);
   box-shadow: var(--card-box-shadow-default);
   transform: none;
   cursor: pointer;
