--- a/src/assets/styles/partials/components/_input.scss
+++ b/src/assets/styles/partials/components/_input.scss
@@ -3,7 +3,7 @@
 
 .input {
   background-color: var(--input-bg-color);
-  border: solid 1px var(--color-border);
+  border: solid #{spacing(-5)} var(--color-border);
   border-radius: #{spacing(-4)};
   color: var(--color-text-emphasis);
   padding: #{spacing(-3)} #{spacing(-2)};
